# escm

./: README.adoc
escm/: AUTHORS  COPYING  ChangeLog  ChangeLog.1  INSTALL  Makefile.am  Makefile.in  NEWS  README  acinclude.m4  aclocal.m4  configure  configure.ac
escm-1/: COPYING  Makefile.in  configure.in  escm.1  escm.c  escm.esc
escm/awk/: Makefile  adddoc.awk  config-h.awk  copyright.awk  funclen.awk  histo.awk  make-lang-c.awk
escm/doc/: 2aescm.1  2aescm.epod  2aescm.html  Makefile.am  Makefile.in  aescm.1  aescm.css  aescm.epod  aescm.html  cgi.escm  config-h.awk  config.scm.in  filter.escm  gimmick.escm  gimmick.html  handler.escm  helper.scm  install.escm  interpreter.escm  interpreter.html  interpreters.escm  library.escm  readme.escm  shebang.escm  todo.escm
escm/po/: ChangeLog  POTFILES.in  ja.po
escm/scm/: gosh.sh  guile.sh  rep.sh  stklos.sh
escm/src/: Makefile.am  Makefile.in  cgi.c  cgi.h  cgimain.c  classic.c  cmdline.c  cmdline.h  config.h.in  copyright.h  escm.c  escm.h  escm_scm.c  escm_scm.h  escmcgi.c  escmcgi.h  fifo.c  filter.c  fork.c  fork.h  handler.c  lang.awk  lang.c  langconf.c  langconf.h  main.c  meta_arg.c  meta_arg.h  misc.c  misc.h
escm/src/data/: awk  csh  perl  python  ruby  scm  sh  tcl
escm/src/escm/: escm.c  escm.h  fork.c
escm/src/lang/: Makefile.am  Makefile.in  awk  csh  lisp  lisp-cmucl  ocaml  octave  perl  python  ruby  scm  scm-fifo  scm-scm  scm.in  sh  tcl
escm/src/parse/: parse.c  parse.h
escm/test/: Finish.sh  Init.sh  Makefile.am  Makefile.in  Template.test  t010_nothing.test  t020_something.test  t030_write.test  t040_display.test  t050_wrong_name.test  t060_wrong_subname.test  t070_blocks.test  t080_displays.test  t090_alternate.test  t100_span.test  t110_string.test  t120_awk.test  t130_preset.test  t140_prst_awk.test  t150_comment.test
